--- a/src/app/components/sale/sale.component.html
+++ b/src/app/components/sale/sale.component.html
@@ -35,10 +35,10 @@
               >
             </div>
             <div class="button-group">
-              <button type="submit" class="btn btn-primary">
+              <button type="submit" class="search-btn btn-sm btn btn-primary">
                 <i class="fas fa-search"></i> Search
               </button>
-              <button type="button" class="btn btn-secondary" (click)="resetForm()">
+              <button type="button" class="search-btn btn btn-sm btn-secondary" (click)="resetForm()">
                 <i class="fas fa-undo"></i> Reset
               </button>
             </div>
@@ -48,7 +48,7 @@
     </div>
   
     <div class="action-buttons">
-      <button routerLink="/combined-purchase-sale" class="btn btn-primary">
+      <button routerLink="/combined-purchase-sale" class="btn btn-sm btn-primary">
         <i class="fas fa-cart-plus"></i> Create Combined Sale
       </button>
     </div>
