--- a/src/app/shared/components/pagination/pagination.component.scss
+++ b/src/app/shared/components/pagination/pagination.component.scss
@@ -104,9 +104,9 @@
             flex-shrink: 0;
 
             input {
-                width: 60px;
+                width: 70px;
                 // height: 32px;
-                padding: 0.375rem 0.75rem;
+                padding: 3px 0.75rem;
                 border: 1px solid var(--supporting);
                 border-radius: 4px;
                 color: var(--text-primary);
