--- a/src/app/components/all-quotation/quotation/quotation.component.scss
+++ b/src/app/components/all-quotation/quotation/quotation.component.scss
@@ -31,7 +31,11 @@
   
         .form-group {
           margin: 0;
-  
+
+          .form-control {
+            height: 43px;
+          }
+
           .product-select-group {
             display: flex;
             gap: 0.5rem;
@@ -168,6 +172,7 @@
   .actions {
     display: flex;
     gap: 0.5rem;
+    padding-bottom: 20px;
     justify-content: flex-start;
   
     .btn-icon {
