--- a/src/app/components/attendance/attendance-list/attendance-list.component.scss
+++ b/src/app/components/attendance/attendance-list/attendance-list.component.scss
@@ -22,10 +22,14 @@
     .search-controls {
       display: flex;
       gap: 10px;
-      align-items: center;
+      align-items: start;
 
       .form-group {
         flex: 1;
+      }
+
+      .form-control {
+        height: 43px;
       }
 
       .button-group {
