--- a/src/app/components/attendance/create-attendance/create-attendance.component.html
+++ b/src/app/components/attendance/create-attendance/create-attendance.component.html
@@ -102,12 +102,12 @@
       </div>
 
       <div class="form-actions">
-        <button type="button" class="btn btn-secondary" routerLink="/attendance">
+        <button type="button" class="btn btn-sm btn-secondary" routerLink="/attendance">
           <i class="fas fa-times"></i> Cancel
         </button>
         <button 
           type="submit" 
-          class="btn btn-primary"
+          class="btn btn-sm btn-primary"
           [disabled]="attendanceForm.invalid || isLoading"
         >
           <i class="fas fa-save"></i> Save
