--- a/src/app/components/attendance/create-attendance/create-attendance.component.scss
+++ b/src/app/components/attendance/create-attendance/create-attendance.component.scss
@@ -122,7 +122,7 @@
 
     .form-actions {
       display: flex;
-      justify-content: flex-end;
+      justify-content: space-between;
       gap: 1rem;
       margin-top: 2rem;
     }
