--- a/src/app/components/category/category.component.scss
+++ b/src/app/components/category/category.component.scss
@@ -155,7 +155,7 @@
     display: flex;
     gap: 1rem;
     width: 100%;
-
+    max-height: 57px;
     @media (max-width: 768px) {
       flex-direction: column;
     }
@@ -260,7 +260,7 @@
 
 .dialog-actions {
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
   gap: 1rem;
   margin-top: 2rem;
 }
