--- a/src/app/components/customer-modal/customer-modal.component.html
+++ b/src/app/components/customer-modal/customer-modal.component.html
@@ -2,9 +2,9 @@
     
   <div class="modal-container" (click)="$event.stopPropagation()">
     <div class="modal-header">
-      <h2><i class="fas fa-user"></i> {{ isEditing ? 'Update' : 'Add New' }} Customer</h2>
-      <button class="btn-icon close" (click)="close()" title="Close">
-        <i class="fas fa-times"></i>
+      <h4><i class="fas fa-user"></i> {{ isEditing ? 'Update' : 'Add New' }} Customer</h4>
+      <button class="btn close" (click)="close()" title="Close">
+        <i class="fa-solid fa-xmark"></i>
       </button>
     </div>
 
@@ -142,14 +142,14 @@
       <div class="modal-actions">
         <button 
           type="button" 
-          class="btn btn-secondary" 
+          class="btn btn-sm btn-secondary" 
           (click)="close()"
         >
           Cancel
         </button>
         <button 
           type="submit" 
-          class="btn btn-primary"
+          class="btn btn-sm btn-primary"
           [disabled]="customerForm.invalid || loading"
         >
           <i class="fas" [ngClass]="loading ? 'fa-spinner fa-spin' : (isEditing ? 'fa-save' : 'fa-plus')"></i>
