--- a/src/app/components/customer/customer.component.html
+++ b/src/app/components/customer/customer.component.html
@@ -28,10 +28,10 @@
           >
         </div>
         <div class="button-group">
-          <button type="submit" class="btn btn-primary">
+          <button type="submit" class="search-btn btn btn-sm btn-primary">
             <i class="fas fa-search"></i> Search
           </button>
-          <button type="button" class="btn btn-secondary" (click)="resetForm()">
+          <button type="button" class="search-btn btn btn-sm btn-secondary" (click)="resetForm()">
             <i class="fas fa-undo"></i> Reset
           </button>
         </div>
@@ -39,7 +39,7 @@
     </form>
   </div>
 
-  <button class="btn btn-primary add-customer-btn mb-2" (click)="openCustomerModal()">
+  <button class="btn btn-sm btn-primary add-customer-btn mb-2" (click)="openCustomerModal()">
     <i class="fas fa-plus"></i> Add Customer
   </button>
 
