--- a/src/app/components/employee/employee-form/employee-form.component.scss
+++ b/src/app/components/employee/employee-form/employee-form.component.scss
@@ -35,7 +35,7 @@
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
       gap: 1.5rem;
-      margin-bottom: 1.5rem;
+      // margin-bottom: 1.5rem;
     }
 
     .form-group {
@@ -61,7 +61,8 @@
 
       .form-control {
         // width: 100%;
-        padding: 0.75rem;
+        height: 43px;
+        // padding: 0.75rem;
         border: 1px solid var(--supporting);
         border-radius: 8px;
         transition: all 0.3s ease;
@@ -103,7 +104,7 @@
 
     .form-actions {
       display: flex;
-      justify-content: flex-end;
+      justify-content: space-between;
       gap: 1rem;
       margin-top: 2rem;
       padding-top: 1rem;
