--- a/src/app/components/employee/employee-list/employee-list.component.scss
+++ b/src/app/components/employee/employee-list/employee-list.component.scss
@@ -22,12 +22,16 @@
     .search-controls {
       display: flex;
       gap: 10px;
-      align-items: center;
+      align-items: start;
 
       .form-group {
         flex: 1;
       }
 
+      .form-control {
+        height: 43px;
+      }
+      
       .button-group {
         display: flex;
         gap: 8px;
