--- a/src/app/components/purchase/purchase.component.html
+++ b/src/app/components/purchase/purchase.component.html
@@ -31,7 +31,8 @@
             ></app-searchable-select>
             <button 
               type="button" 
-              class="btn-icon refresh" 
+              class="btn btn-sm btn-primary refresh"
+              style="margin-top: 3px;"
               (click)="refreshCustomers()" 
               [disabled]="isLoadingCustomers"
               title="Refresh Customers"
@@ -57,17 +58,17 @@
           >
         </div>
         <div class="button-group">
-          <button type="submit" class="btn btn-primary">
+          <button type="submit" class="search-btn btn btn-sm btn-primary">
             <i class="fas fa-search"></i> Search
           </button>
-          <button type="button" class="btn btn-secondary" (click)="resetForm()">
+          <button type="button" class="search-btn btn btn-sm btn-secondary" (click)="resetForm()">
             <i class="fas fa-undo"></i> Reset
           </button>
         </div>
       </div>
     </form>
   </div>
-    <button routerLink="/purchase/create" class="btn btn-primary mb-2">Add Purchase</button>
+    <button routerLink="/purchase/create" class="btn btn-sm btn-primary mb-2">Add Purchase</button>
   <div class="purchases-list card">
     <h2>Purchases</h2>
 
