--- a/src/app/components/sale/sale.component.scss
+++ b/src/app/components/sale/sale.component.scss
@@ -21,7 +21,7 @@
         flex-direction: column;
         gap: 1.5rem;
         background: white;
-        padding: 1.5rem;
+        // padding: 1.5rem;
         border-radius: var(--border-radius);
       }
   
@@ -98,7 +98,7 @@
         gap: 1rem;
         // justify-content: flex-end;
         margin-top: 1rem;
-  
+        align-items: center;
         .btn {
           display: flex;
           align-items: center;
@@ -107,7 +107,7 @@
           // height: 42px;
           font-weight: 500;
           transition: all 0.3s ease;
-          border-radius: var(--border-radius);
+          border-radius: 4px;
   
           i {
             font-size: 1rem;
