--- a/src/app/components/shared/product-calculation-dialog/product-calculation-dialog.component.html
+++ b/src/app/components/shared/product-calculation-dialog/product-calculation-dialog.component.html
@@ -45,10 +45,10 @@
                 <td>
                   <input type="number" formControlName="weight" class="form-control" readonly>
                 </td>
-                <td>
+                <td class="pt-0">
                   <button 
                     type="button" 
-                    class="btn-icon delete" 
+                    class="btn btn-sm btn-danger" 
                     (click)="removeRow(i)"
                     [disabled]="calculationsArray.length === 1"
                   >
