--- a/src/styles.scss
+++ b/src/styles.scss
@@ -73,7 +73,7 @@ body {
   width: 90%;
   padding: 10px;
   border: 1px solid var(--supporting);
-  border-radius: 4px;
+  border-radius: 4px !important;
   margin-bottom: 15px;
   &:focus {
     outline: none;
@@ -216,4 +216,20 @@ body {
       max-width: calc(100% - 20px) !important;
     }
   }
+}
+
+.search-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  max-height: 40px;
+  max-width: 90px;
+}
+
+.refresh, .calculator {
+  width: 33px;
+  height: 33px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
