Fixed some style issues.

--- a/src/app/components/shared/product-calculation-dialog/product-calculation-dialog.component.html
+++ b/src/app/components/shared/product-calculation-dialog/product-calculation-dialog.component.html
@@ -72,10 +72,10 @@
         </div>
 
         <div class="dialog-actions">
-          <button type="button" class="btn btn-secondary" (click)="addRow()">
+          <button type="button" class="btn btn-sm btn-secondary" (click)="addRow()">
             <i class="fas fa-plus"></i> Add Row
           </button>
-          <button type="button" class="btn btn-primary" (click)="onSave()">
+          <button type="button" class="btn btn-sm btn-primary" (click)="onSave()">
             <i class="fas fa-save"></i> Save Calculation
           </button>
         </div>
