--- a/src/app/components/shared/product-calculation-dialog/product-calculation-dialog.component.scss
+++ b/src/app/components/shared/product-calculation-dialog/product-calculation-dialog.component.scss
@@ -21,11 +21,11 @@
       padding: 0.75rem;
       border: 1px solid var(--border-color);
       text-align: center;
-      
+      justify-content: center;
       input {
-        width: 100px;
+        width: 85px;
         text-align: center;
-        
+        height: 40px;
         &:read-only {
           background-color: var(--background-light);
         }
