Added quotation calculation table validation & some fixes.

--- a/src/app/components/all-quotation/add-quotation/add-quotation.component.html
+++ b/src/app/components/all-quotation/add-quotation/add-quotation.component.html
@@ -106,7 +106,7 @@
             <thead>
               <tr>
                 <th>Product</th>
-                <th>Calculation Type</th>
+                <th class="calc-type-col">Calculation Type</th>
                 <th>Weight</th>
                 <th>Quantity</th>
                 <th>Unit Price</th>
