--- a/src/app/components/shared/product-calculation-dialog/product-calculation-dialog.component.html
+++ b/src/app/components/shared/product-calculation-dialog/product-calculation-dialog.component.html
@@ -56,7 +56,7 @@
                   <input type="number" formControlName="sqFeet" class="form-control" readonly>
                 </td>
                 <td>
-                  <input type="number" formControlName="weight" class="form-control" readonly>
+                  <input type="number" [value]="row.get('weight')?.value | number:'1.3-3'" formControlName="weight" class="form-control" readonly>
                 </td>
                 <td class="pt-0">
                   <button 
@@ -77,7 +77,7 @@
                 <td>{{ totals.totalNos }}</td>
                 <td>{{ totals.totalRunningFeet }}</td>
                 <td>{{ totals.totalSqFeet }}</td>
-                <td>{{ totals.totalWeight }}</td>
+                <td>{{ totals.totalWeight | number:'1.3-3' }}</td>
                 <td></td>
               </tr>
             </tfoot>
