Set fields in update quotation UI & fixed some issues.

--- a/src/app/components/all-quotation/add-quotation/add-quotation.component.html
+++ b/src/app/components/all-quotation/add-quotation/add-quotation.component.html
@@ -271,7 +271,7 @@
         </button>
         <button type="submit" class="btn btn-sm btn-primary" [disabled]="quotationForm.invalid || loading">
           <i class="fas" [ngClass]="loading ? 'fa-spinner fa-spin' : 'fa-save'"></i>
-          {{ loading ? 'Saving...' : 'Save Quotation' }}
+          {{ isEdit ? loading ?  'Updating...' : 'Update Quotation' : loading ? 'Saving...' : 'Save Quotation' }}
         </button>
       </div>
     </form>
